# oxcaml

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  HACKING.md  HACKING.ox.adoc  Makefile  Makefile.common  Makefile.common-ox  Makefile.config.in  Makefile.menhir  Makefile.ox  Makefile.upstream  README.md  build_ocaml_compiler.sexp  configure.ac  default.nix  dune  dune-project  flake.nix  jane-street-merlin-setup.sh
.claude/: settings.json
asmcomp/: .ocamlformat  asmgen.ml  asmgen.mli  asminstantiator.ml  asminstantiator.mli  asmlibrarian.ml  asmlibrarian.mli  asmlink.ml  asmlink.mli  asmpackager.ml  asmpackager.mli  binary_emitter_verify.ml  binary_emitter_verify.mli  cm_bundle.ml  cm_bundle.mli  optlink.ml
backend/: .ocamlformat-enable  afl_instrument.ml  branch_relaxation.ml  branch_relaxation_intf.mli  cfg_selectgen.ml  cmm.ml  cmm.mli  cmm_builtins.ml  cmm_helpers.ml  cmm_helpers.mli  cmm_invariants.ml  cmm_peephole_engine.ml  cmm_peephole_engine.mli  cmmgen_state.ml  emitaux.ml  emitaux.mli  generic_fns.ml  jit_backend.ml  jit_backend.mli  linear.ml  linear.mli  operation.ml  operation.mli  printcmm.ml  printlinear.ml  printoperation.ml  probe_emission.ml  probe_emission.mli  proc.mli  reg.ml  reg.mli  reg_class_utils.mli  select_utils.ml  select_utils.mli  stack_class_utils.ml  stack_class_utils.mli  vectorize_utils.mli  x86_ast.mli  x86_ast_utils.ml  x86_ast_utils.mli  (+13 more)
build-aux/: ocaml_version.m4
bytecomp/: .ocamlformat  blambda.ml  blambda_of_lambda.ml  blambda_of_lambda.mli  bytegen.ml  bytelibrarian.ml  bytelink.ml  bytepackager.ml  emitcode.ml  instruct.ml  instruct.mli  printblambda.ml  printinstr.ml  symtable.ml
chamelon/: chamelon.ml  compat.mli  compat.ox.ml  compat.upstream.ml  dune  dune.ox  function_compat.ml  function_compat.mli  iterator.ml  utils.ml
chamelon/compat/: dune.ox  dune.upstream  function_compat.mli
chamelon/lib/: dune  iterator.ml  iterator.mli
chamelon/lib/minimizer/: dummy.ml  flatteningmodules.ml  inlinefunction.ml  mergefiles.ml  remdef.ml  removedeadcode.ml  removeunit.ml  removeunusedrec.ml  simplifyapplication.ml  simplifymatch.ml
chamelon/minimizer/: deletelines.ml  dummy.ml  dummy_expr.ml  flatteningmodules.ml  inlinenever.ml  reducedef.ml  reduceexpr.ml  reduceexpr_typesafe.ml  reducepat.ml  removeattributes.ml  removeconsfields.ml  removedeadcode.ml  removefiles.ml  removeunusedargs.ml  sequentializefunctions.ml  simplifymatch.ml  simplifysequences.ml  simplifytypes.ml  stub.ml
debugger/: eval.ml  loadprinter.ml  main.ml  printval.ml
debugger4/: eval.ml  loadprinter.ml  main.ml  parameters.ml  parameters.mli
driver/: .ocamlformat-enable  boot_ocamlj.ml  compenv.ml  compenv.mli  compile.ml  compile.mli  compile_common.ml  compile_common.mli  compmisc.ml  compmisc.mli  dune  instantiator.ml  instantiator.mli  jscompile.ml  jscompile.mli  jslibrarian.ml  jslibrarian.mli  jsmaindriver.ml  main_args.ml  main_args.mli  maindriver.ml  makedepend.ml  optcompile.ml  optcompile.mli  optmaindriver.ml  optmaindriver.mli  oxcaml_args.ml  oxcaml_args.mli  oxcaml_flags.ml  oxcaml_flags.mli  pparse.ml  pparse.mli
duneconf/: dune
extract_externals/: .ocamlformat  extract_externals.ml
file_formats/: cmj_format.mli  cmt_format.ml  cmx_format.mli
lambda/: .ocamlformat-enable  debuginfo.ml  debuginfo.mli  lambda.ml  lambda.mli  matching.ml  mixed_block_shape.ml  mixed_block_shape.mli  mixed_product_bytes.ml  mixed_product_bytes.mli  printlambda.ml  printlambda.mli  printslambda.ml  printslambda.mli  printslambda0.ml  printslambda0.mli  simplif.ml  simplif.mli  slambda.ml  slambda.mli  slambda0.ml  slambda0.mli  slambdaeval.ml  slambdaeval.mli  static_label.ml  static_label.mli  switch.ml  switch.mli  tmc.ml  transl_array_comprehension.ml  transl_array_comprehension.mli  transl_comprehension_utils.ml  transl_comprehension_utils.mli  transl_list_comprehension.ml  translattribute.ml  translclass.ml  translcore.ml  translcore.mli  translmod.ml  translmod.mli  (+8 more)
lex/: dune
middle_end/: backend_var.ml  backend_var.mli  compilenv.ml  compilenv.mli
middle_end/flambda2/parser/: dune  fexpr.ml  fexpr_prim.ml  fexpr_prim_descr.ml  fexpr_prim_descr.mli  fexpr_to_flambda.ml  fexpr_to_flambda_commons.ml  flambda_lex.ml  flambda_lex.mli  flambda_lex.mll  flambda_parser.messages  flambda_parser.ml  flambda_parser.mli  flambda_parser.mly  flambda_parser.new-messages  flambda_to_fexpr.ml  flambda_to_fexpr_commons.ml  parse_flambda.ml  print_fexpr.ml  print_fexpr.mli
ocamldoc/: odoc_ast.ml  odoc_env.ml  odoc_lexer.mll  odoc_misc.ml  odoc_print.ml  odoc_sig.ml  odoc_str.ml  odoc_value.ml
ocamltest/: builtin_actions.ml  dune  ocaml_actions.ml  ocaml_actions.mli  ocaml_commands.ml  ocaml_commands.mli  ocaml_files.ml  ocaml_files.mli  ocaml_tests.ml  ocamltest_config.ml.in  ocamltest_config.mli  ocamltest_unix_real.ml
optcomp/: .ocamlformat  linkenv.ml  linkenv.mli  optcomp_intf.ml  optcompile.ml  optlibrarian.ml  optlink.ml  optpackager.ml
otherlibs/camlinternaleval/: .ocamlformat  META.in  camlinternaleval.ml  camlinternaleval.mli  dune  eval_stubs.c
oxcaml/tests/backend/attributes/: backend_attributes.ml  dune  grep_dump.ml
oxcaml/tests/backend/binary_emitter/verify/: dune  test_verify.ml
oxcaml/tests/backend/binary_emitter/verify/arm64/: data_only.s  match.s  mismatch_data_content.s  mismatch_data_reloc.s  mismatch_data_size.s  mismatch_text_content.s  mismatch_text_reloc.s  mismatch_text_size.s  reference.s  text_only.s
oxcaml/tests/backend/probes/optimized/: dune  dune.optimized-probes
oxcaml/tests/backend/validators/: check_prologue_validation.ml  check_regalloc_validation.ml  dune  utils.ml  utils.mli
oxcaml/tests/dissector/: cclib_test.ml  cmxa_test.expected  cross_partition.expected  cstub.c  cstub_passthrough.ml  dune  generate_large_modules.ml  nostdlib_a.ml  nostdlib_b.ml  nostdlib_c.ml  nostdlib_d.ml  nostdlib_main.ml  simple.expected  simple.ml  simple_funcsect.ml
oxcaml/tests/intrinsics/: dune  test_arch.ml
oxcaml/tests/owee/: dune  generate_expected.sh  test_archive.ml  test_file1.c  test_file2.c
(+1701 files in other folders)
