; To avoid forcing people to have exactly the right Menhir installed, we don't
; declare the generated .ml files as targets directly. Instead, we provide the
; @regen alias that regenerates them only if asked for. The Makefile then runs
; the alias with --auto-promote.

(alias (name regen))

(rule
 (target flambda_lex.ml.new)
 (deps flambda_lex.mll)
 (alias regen)
 (action
  (chdir %{workspace_root}
   (run ocamllex -q %{deps} -o %{target}))))

(rule
 (alias regen)
 (action
  (diff flambda_lex.ml flambda_lex.ml.new)))

(rule
 (alias regen)
 (deps flambda_parser_in.ml)
 (targets)
 (action
  (progn
   (with-stdin-from
    %{deps}
    (with-stdout-to
     flambda_parser.ml.new
     (run sed "s/MenhirLib/CamlinternalMenhirLib/g")))
   (diff flambda_parser.ml flambda_parser.ml.new))))

(rule
 (alias regen)
 (deps flambda_parser_in.mli)
 (targets)
 (action
  (progn
   (with-stdin-from
    %{deps}
    (with-stdout-to
     flambda_parser.mli.new
     (run sed "s/MenhirLib/CamlinternalMenhirLib/g")))
   (diff flambda_parser.mli flambda_parser.mli.new))))

(rule
 (targets flambda_parser_in.ml flambda_parser_in.mli)
 (deps flambda_parser.mly)
 (action
  (run menhir --strict --table %{deps} --base flambda_parser_in)))

; NOTE: flambda_parser.messages is massively out of date.

(alias (name regen-messages))

(rule
 (alias list-errors)
 (action
  (with-stdout-to
   flambda_parser.messages.new
   (run
    menhir
    %{dep:flambda_parser.mly}
    --list-errors))))

(rule
 (action
  (with-stdout-to
   flambda_parser_messages.ml
   (run
    menhir
    %{dep:flambda_parser.mly}
    --compile-errors
    %{dep:flambda_parser.messages}))))

(rule
 (alias check-errors)
 (action
  (run
   menhir
   %{dep:flambda_parser.mly}
   --compare-errors
   %{dep:flambda_parser.messages}
   --compare-errors
   %{dep:flambda_parser.messages.new})))

(rule
 (alias regen-messages)
 (action
  (with-stdout-to
   flambda_parser.messages.updated
   (run
    menhir
    %{dep:flambda_parser.mly}
    --merge-errors
    %{dep:flambda_parser.messages.new}
    --merge-errors
    %{dep:flambda_parser.messages}))))

(rule
 (mode promote)
 (alias regen-messages)
 (action
  (diff flambda_parser.messages %{dep:flambda_parser.messages.updated})))

(include_subdirs unqualified)

(library
 (name flambda2_parser)
 (wrapped true)
 (instrumentation (backend bisect_ppx))
 (flags
  (:standard
   -open
   Flambda2_bound_identifiers
   -open
   Flambda2_identifiers
   -open
   Flambda2_kinds
   -open
   Flambda2_term_basics
   -open
   Flambda2_terms
   -open
   Flambda2_algorithms
   -open
   Flambda2_numbers
   -open
   Flambda2_lattices
   -open
   Flambda2_nominal))
 (ocamlopt_flags
  (:standard
   (:include %{project_root}/ocamlopt_flags.sexp)
   -O3
   -open
   Int_replace_polymorphic_compare))
 (modules
  (:standard \ flambda_parser_in))
 ; ignore inputs to sed
 (libraries
  ocamlcommon
  flambda2_algorithms
  flambda2_terms
  flambda2_bound_identifiers
  flambda2_identifiers
  flambda2_kinds
  flambda2_term_basics
  flambda2_numbers
  flambda2_lattices
  flambda2_nominal))
