(rule
 (alias runtest)
 (enabled_if
  (= %{context_name} "main"))
 (deps select_float.ml)
 (action
  (run %{bin:ocamlopt.opt} %{deps} -c)))

; Test atomics with binary emitter - not supported on macOS

(executables
 (names atomics)
 (modules atomics)
 (enabled_if
  (and
   (= %{context_name} "main")
   (= %{architecture} "amd64")
   (<> %{system} macosx)))
 (ocamlopt_flags
  (:standard -internal-assembler)))

(rule
 (enabled_if
  (and
   (= %{context_name} "main")
   (= %{architecture} "amd64")
   (<> %{system} macosx)))
 (targets atomics.out)
 (deps atomics.exe)
 (action
  (progn
   (with-outputs-to
    atomics.out
    (run ./atomics.exe)))))

(rule
 (alias runtest)
 (enabled_if
  (and
   (= %{context_name} "main")
   (= %{architecture} "amd64")
   (<> %{system} macosx)))
 (action
  (progn
   (diff empty.expected atomics.out))))


; Test arch_* intrinsics

(executables
 (names test_arch)
 (modules test_arch)
 (enabled_if
   (= %{context_name} "main")))

(rule
 (enabled_if
   (= %{context_name} "main"))
 (targets test_arch.out)
 (deps test_arch.exe)
 (action
  (progn
   (with-outputs-to
    %{targets}
    (run ./test_arch.exe)))))

(rule
 (alias runtest)
 (enabled_if
  (and
   (= %{context_name} "main")
   (= %{architecture} "amd64")))
 (action
  (progn
   (diff test_arch.amd64.expected test_arch.out))))

(rule
 (alias runtest)
 (enabled_if
  (and
   (= %{context_name} "main")
   (= %{architecture} "arm64")))
 (action
  (progn
   (diff test_arch.arm64.expected test_arch.out))))

