(library
 (name utils)
 (modules utils)
 (libraries ocamloptcomp))
(tests
 (names check_regalloc_validation)
 (modules check_regalloc_validation)
 ; CR xclerc: on arm64, we currently get a different Reg.t stamp in a test
 (enabled_if (= %{architecture} "amd64"))
 ; FIXME Fix warnings
 (flags
  (:standard -no-principal -w -27-32))
 (libraries utils))
(tests
 (names check_prologue_validation)
 (modules check_prologue_validation)
 (libraries utils))
